--- a/daily.org
+++ b/daily.org
@@ -76,7 +76,7 @@
     - [X] Jiffy Lube
     - [ ] Evening Prayer
 ** 2018-05 May
-*** 2018-05-19 Monday [0/15]
+*** 2018-05-19 Monday [0/16]
     - [ ] Deposit money
     - [ ] Brush teeth in morning
     - [ ] Brush teeth in evening
@@ -92,3 +92,5 @@
     - [ ] Setup appointment for driver's license test
     - [ ] Find car title
     - [ ] Buy 2% and whole milk
+    - [ ] Write in journal (catch up all the way)
+
